--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "progress-report",
-  "version": "1.0.0-rc.1",
+  "version": "1.0.0",
   "description": "A simple vitpress site for training progress report writing",
   "scripts": {
     "dev": "vitepress dev src",
